--- a/package/example.ipynb
+++ b/package/example.ipynb
@@ -11,8 +11,9 @@
     "</a>\n",
     "\n",
     "## Notes\n",
-    "The purpose of this example is only to showcase the package;\n",
-    "some specific details (data preprocessing, hyperparameters, etc.)\n",
+    "\n",
+    "- This notebook provides a usage example of [this Python package](https://yandex-research.github.io/tabular-dl-revisiting-models)\n",
+    "- Some specific details (data preprocessing, hyperparameters, etc.)\n",
     "may be suboptimal."
    ]
   },
