--- a/package/example.ipynb
+++ b/package/example.ipynb
@@ -13,8 +13,7 @@
     "## Notes\n",
     "\n",
     "- This notebook provides a usage example of [this Python package](https://yandex-research.github.io/tabular-dl-revisiting-models)\n",
-    "- Some specific details (data preprocessing, hyperparameters, etc.)\n",
-    "may be suboptimal."
+    "- Some specific details (data preprocessing, hyperparameters, etc.) may be suboptimal."
    ]
   },
   {
