--- a/package/example.ipynb
+++ b/package/example.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## Notes\n",
     "\n",
-    "- This notebook provides a usage example of [this Python package](https://yandex-research.github.io/tabular-dl-revisiting-models)\n",
+    "- This notebook provides a usage example of [this Python package](https://yandex-research.github.io/tabular-dl-revisiting-models).\n",
     "- Some specific details (data preprocessing, hyperparameters, etc.) may be suboptimal."
    ]
   },
