--- a/package/example.ipynb
+++ b/package/example.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Colab\n",
-    "\n",
     "<a target=\"_blank\" href=\"https://colab.research.google.com/github/yandex-research/tabular-dl-revisiting-models/blob/main/package/example.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
@@ -115,12 +113,12 @@
     "train_size = len(X_cont['train'])\n",
     "\n",
     "# NOTE\n",
-    "# Overall, the choice between preprocessing strategies depends on a task and a model.\n",
+    "# The choice between preprocessing strategies depends on a task and a model.\n",
     "\n",
-    "# A simple preprocessing strategy.\n",
+    "# (A) Simple preprocessing strategy.\n",
     "# preprocessing = sklearn.preprocessing.StandardScaler().fit(X_cont['train'])\n",
     "\n",
-    "# A fancy preprocessing strategy.\n",
+    "# (B) Fancy preprocessing strategy.\n",
     "X_std = X_cont['train'].std(axis=0)\n",
     "noise_hint = 1e-3\n",
     "noise_std = np.minimum(noise_hint, noise_hint * X_std)\n",
