--- a/package/example.ipynb
+++ b/package/example.ipynb
@@ -284,10 +284,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NOTE: in practice, since we use early stopping,\n",
-    "# there is no need to limit the number of epochs.\n",
-    "# We set it to 100 only to speep up the training.\n",
-    "n_epochs = 100\n",
+    "# NOTE: the number of epochs is effecively infinite and\n",
+    "# we rely on early stopping to stop the training.\n",
+    "# To speed up the training, set n_epochs or patience to smaller values.\n",
+    "n_epochs = 1_000_000_000\n",
     "batch_size = 256\n",
     "early_stopping = delu.EarlyStopping(patience=16, mode='max')\n",
     "best = {\n",
