--- a/package/example.ipynb
+++ b/package/example.ipynb
@@ -284,10 +284,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NOTE: to speed up the training, set n_epochs or patience to smaller values.\n",
-    "n_epochs = 1000\n",
     "batch_size = 256\n",
-    "early_stopping = delu.EarlyStopping(patience=16, mode='max')\n",
+    "\n",
+    "# (A) Faster training, worse task performance.\n",
+    "n_epochs = 100\n",
+    "patience = 5\n",
+    "\n",
+    "# (B) Longer training, better task performance.\n",
+    "# n_epochs = 1_000_000_000\n",
+    "# patience = 16\n",
+    "\n",
+    "early_stopping = delu.EarlyStopping(patience, mode='max')\n",
     "best = {\n",
     "    'val': -math.inf,\n",
     "    'test': -math.inf,\n",
