--- a/package/example.ipynb
+++ b/package/example.ipynb
@@ -4,13 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/yandex-research/tabular-dl-revisiting-models/blob/main/package/example.ipynb\">\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/yandex-research/rtdl-revisiting-models/blob/main/package/example.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
-    "## Notes\n",
+    "---\n",
     "\n",
-    "**Hyperparameters are not tuned and may be suboptimal.**"
+    "**See also** [RTDL](https://github.com/yandex-research/rtdl)\n",
+    "-- **other projects on tabular deep learning**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "- This notebook provides a usage example of the\n",
+    "  [rtdl_revisiting_models](https://github.com/yandex-research/rtdl-revisiting-models)\n",
+    "  package.\n",
+    "- Hyperparameters are not tuned and may be suboptimal."
    ]
   },
   {
